# rugo

./: .env  .env.example  Cargo.toml  LICENSE  README.md  main.rs  tst.json  update_run.cmd
repdb/: Cargo.toml  README.md
repdb/src/: certificate.rs  company.rs  contact.rs  department.rs  education.rs  email.rs  hideout.rs  hideout_type.rs  kind.rs  lib.rs  main.rs  phone.rs  post.rs  practice.rs  rank.rs  scope.rs  select.rs  siren.rs  siren_type.rs  tcc.rs
src/: auth.rs  certificate.rs  company.rs  contact.rs  db.rs  dbo.rs  department.rs  education.rs  email.rs  error.rs  errors.rs  hideout.rs  hideout_type.rs  kind.rs  main.rs  phone.rs  post.rs  practice.rs  rank.rs  redirect.rs  scope.rs  select.rs  server.rs  services.rs  session.rs  siren.rs  siren_type.rs  tcc.rs  users.rs
src/rpel/: certificate.rs  company.rs  contact.rs  department.rs  education.rs  email.rs  hideout.rs  hideout_type.rs  kind.rs  mod.rs  phone.rs  post.rs  practice.rs  rank.rs  scope.rs  select.rs  siren.rs  siren_type.rs  tcc.rs  user.rs
