[package]
authors = ["Serbe <mkoctuk@gmail.com>"]
edition = "2018"
name = "rugo"
version = "0.7.0"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = {version = "0.4", features = ["serde"]}
deadpool-postgres = "0.5"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
futures-util = {version = "0.3", features = ["sink"]}
log = {version = "0.4", features = ["std"]}
rand = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "0.2", features = ["io-util", "sync", "macros"]}
tokio-tungstenite = "0.11"
tokio-postgres = {version = "0.5", features = ["with-chrono-0_4"]}
tungstenite = "0.11"
