[package]
name = "rugo"
version = "0.8.0"
authors = ["Serbe <mkoctuk@gmail.com>"]
edition = "2018"

[dependencies]
# anyhow = "1.0"
# futures = "0.3"
# futures-util = { version = "0.3", features = ["sink"] }
# rpel = { git = "https://github.com/serbe/rpel", version = "0.3.5" }
# tokio = { version = "0.2", features = ["io-util", "sync", "macros"] }
actix-cors = "0.5"
actix-rt = "1.1"
actix-web = "3.2"
actix-web-httpauth = "0.5"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = "0.5"
dotenv = "0.15"
env_logger = "0.8"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = {version = "0.5", features = ["with-chrono-0_4"]}
thiserror = "1.0"
