[package]
name = "repdb"
version = "0.4.6"
authors = ["Serbe <mkoctuk@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.14"
serde_json = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.postgres]
version = "0.15"
features = ["with-chrono"]

[dependencies.serde]
version = "1.0"
features = ["derive"]